src/test/ui/where-clauses/where-eq-self.stderr
error[E0308]: method not compatible with trait
  --> $DIR/where-eq-self.rs:14:5
   |
LL |     fn test<T>() -> Self where T = Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected type parameter `T`, found struct `Foo`
   |
   = note:      expected struct `Foo`
           found type parameter `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
